src/styles/index-page.css
@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');

.index-page .heading {

}

.index-page .title {
    display: flex;
    margin: 5% 0 0 0;
    width: 100%;
}

.index-page .title > img {
    width: 30%;
    margin-left: -8%;
}

.index-page .title h1 {
    display: inline-block;
    margin: 10% -8% 0 5%;
    margin-top: 10%;
    width: 100%;
    text-align: center;
    color: white;
    font-weight: 500;
    font-size: 50px;
}

.index-page .inex-page-links {
    display: flex;
    justify-content: center;
    margin: 80px 0;
    padding: 0 8%;
    gap: calc(28px + 4%);
    flex-wrap: wrap;
}

.index-page .display {
    height: 3000px;
}

@media(max-width: 1700px) {
    .index-page .title h1 {
        font-size: 30px;
    }
}

@media (max-aspect-ratio: 7/10) {
    .index-page .title {
        flex-direction: column;
        align-items: center;
    }

    .index-page .title h1 {
        width: 80%;
        margin: 0;
        margin-top: 10%;
        font-size: 20px;
        background-color: rgba(var(--layout-emphasis-color-rgb), 0.6);
        padding: 10%;
        border-radius: 50px;
    }

    .index-page .title > img {
        width: 60%;
        margin: 0;
        margin-top: 15%;
    }

    .index-page .inex-page-links a {
        font-size: 25px;
    }

    .index-page .inex-page-links {
        margin: 40px 0;
        gap: 10px;
    }
}

